[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/car.gd" type="Script" id=1]
[ext_resource path="res://models/car_00.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/bip.ogg" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.943777, 0.3, 0.42997 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 0.955608, 0.218925, 0.436536 )

[node name="car" type="KinematicBody" index="0"]

input_ray_pickable = true
input_capture_on_drag = true
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = true
axis_lock_linear_z = false
axis_lock_angular_x = true
axis_lock_angular_y = false
axis_lock_angular_z = true
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Axis Lock", "Collision", "Transform", "collision" ]

[node name="car_00" parent="." index="0" instance=ExtResource( 2 )]

transform = Transform( 0.974108, 0, 0, 0, 1, 0, 0, 0, 1, 0.00431532, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0201337, 0.340053, 0 )
shape = SubResource( 1 )
disabled = false

[node name="frontRay" type="RayCast" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.9357, 0.200806, 0 )
enabled = true
exclude_parent = true
cast_to = Vector3( -0.1, 0, 0 )
collision_mask = 1

[node name="backRay" type="RayCast" parent="." index="3"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.975587, 0.200806, 0 )
enabled = true
exclude_parent = true
cast_to = Vector3( 0.1, 0, 0 )
collision_mask = 1

[node name="bip" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="bipTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Area" type="Area" parent="." index="6"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape2" type="CollisionShape" parent="Area" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0201337, 0.340053, 0 )
shape = SubResource( 2 )
disabled = false

[connection signal="input_event" from="." to="." method="_on_car_input_event"]

[connection signal="timeout" from="bipTimer" to="." method="_on_bipTimer_timeout"]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]


